--- a/src/front/package.json
+++ b/src/front/package.json
@@ -13,21 +13,21 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@cartesi/rollups": "^1.0.0",
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "9.92.3",
+    "@react-three/fiber": "8.15.12",
     "@react-three/postprocessing": "^2.15.12",
     "@reduxjs/toolkit": "^2.0.1",
-    "@types/three": "^0.160.0",
+    "@types/three": "0.159.0",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
-    "three": "^0.160.0",
     "three-line-raycast": "1.0.2",
     "troika-three-text": "^0.49.0",
     "viem": "^1.21.0",
-    "wagmi": "^1.4.12"
+    "wagmi": "^1.4.12",
+    "three": "0.159.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
