--- a/src/front/package.json
+++ b/src/front/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@cartesi/rollups": "^1.0.0",
+    "@latticexyz/faucet": "2.0.0-next.17",
     "@react-three/drei": "9.92.3",
     "@react-three/fiber": "8.15.12",
     "@react-three/postprocessing": "^2.15.12",
@@ -23,11 +24,11 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
+    "three": "0.159.0",
     "three-line-raycast": "1.0.2",
     "troika-three-text": "^0.49.0",
     "viem": "^1.21.0",
-    "wagmi": "^1.4.12",
-    "three": "0.159.0"
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
