faucet server source directory fix

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -97,6 +97,7 @@ jobs:
           FAUCET_PRIVATE_KEY: "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
           DRIP_AMOUNT_ETHER: 200
         run: |
+          cd src/front
           pnpm install @latticexyz/faucet@next
           pm2 start --name faucet-server "pnpm faucet-server"
       
