--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "esbuild": "^0.19.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "3.2.5"
   },
   "scripts": {
     "build": "esbuild ./src/server/index.ts --bundle --outfile=dist/index.js --platform=node --target=node20",
