--- a/src/front/tsconfig.node.json
+++ b/src/front/tsconfig.node.json
@@ -4,7 +4,8 @@
         "skipLibCheck": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "strict": false
     },
     "include": ["vite.config.ts"]
 }
