basic state server implementation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "build": "esbuild ./src/server/index.ts --bundle --outfile=dist/index.js --platform=node --target=node20",
         "start": "npm run build && ROLLUP_HTTP_SERVER_URL=\"http://127.0.0.1:5004\" node dist/index.js",
         "host": "npm run build && ROLLUP_HTTP_SERVER_URL=\"http://127.0.0.1:8080/host-runner\" node dist/index.js",
-        "dev": "nodemon --watch ./src --ext js,ts,json,html --delay 0.5 --exec npm run host"
+        "dev": "nodemon --watch ./src/core --ext js,ts,json,html --delay 0.5 --exec npm run host"
     },
     "keywords": [
         "cartesi"
