--- a/src/front/package.json
+++ b/src/front/package.json
@@ -19,6 +19,7 @@
         "@react-three/postprocessing": "^2.15.12",
         "@reduxjs/toolkit": "^2.0.1",
         "@types/three": "0.159.0",
+        "colyseus.js": "^0.15.18",
         "graphql": "^16.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
