--- a/src/indexer/package.json
+++ b/src/indexer/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "tsx watch src/index.ts",
     "dev": "tsx --inspect src/index.ts",
+    "host": "tsx  src/index.ts",
     "loadtest": "tsx loadtest/example.ts --room my_room --numClients 2",
     "build": "npm run clean && tsc",
     "clean": "rimraf build",
