--- a/src/front/package.json
+++ b/src/front/package.json
@@ -20,9 +20,11 @@
         "@react-three/postprocessing": "^2.15.12",
         "@reduxjs/toolkit": "^2.0.1",
         "@types/three": "0.159.0",
+        "bootstrap": "^5.3.3",
         "colyseus.js": "^0.15.18",
         "graphql": "^16.8.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.10.1",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.3",
         "react-redux": "^9.0.4",
