--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -12,32 +12,32 @@ jobs:
             - name: Checkout Repository
               uses: actions/checkout@v3
 
-            - name: Install Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: "21.5.0"
+            # - name: Install Node.js
+            #   uses: actions/setup-node@v3
+            #   with:
+            #       node-version: "21.5.0"
 
-            - name: Install pnpm
-              run: |
-                  curl -fsSL https://get.pnpm.io/install.sh | sh -
-                  source /root/.bashrc
+            # - name: Install pnpm
+            #   run: |
+            #       curl -fsSL https://get.pnpm.io/install.sh | sh -
+            #       source /root/.bashrc
 
-            - name: Install Docker
-              run: |
-                  # Add Docker's official GPG key:
-                  sudo apt-get update
-                  sudo apt-get install -y ca-certificates curl
-                  sudo install -m 0755 -d /etc/apt/keyrings
-                  sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-                  sudo chmod a+r /etc/apt/keyrings/docker.asc
+            # - name: Install Docker
+            #   run: |
+            #       # Add Docker's official GPG key:
+            #       sudo apt-get update
+            #       sudo apt-get install -y ca-certificates curl
+            #       sudo install -m 0755 -d /etc/apt/keyrings
+            #       sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+            #       sudo chmod a+r /etc/apt/keyrings/docker.asc
 
-                  # Add the repository to Apt sources:
-                  echo \
-                    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-                    $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
-                    sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-                  sudo apt-get update
-                  sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+            #       # Add the repository to Apt sources:
+            #       echo \
+            #         "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+            #         $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+            #         sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            #       sudo apt-get update
+            #       sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
             # - name: Install Sunodo
             #   run: |
@@ -62,11 +62,20 @@ jobs:
 
             - name: Clear Existing PM2 Processes
               run: |
+                  pm2 stop all || true
                   pm2 delete blockchain || true
                   pm2 delete node-backend || true
                   pm2 delete front-end || true
                   pm2 delete faucet-server || true
                   pm2 delete state-indexer || true
+            
+            - name: Clear Existing Docker Containers
+              run: |
+                  docker stop $(docker ps -aq) || true
+                  docker rm -v $(docker ps -aq) || true
+                  docker volume prune -f || true
+                  docker rmi $(docker images -q) || true
+                  docker volume prune -f || true
 
             - name: Set up Local Blockchain and Smart Contracts
               run: pm2 start --name blockchain "sunodo run --no-backend"
