--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -17,10 +17,10 @@ jobs:
               with:
                   node-version: "21.5.0"
 
-            - name: Install pnpm
-              run: |
-                  curl -fsSL https://get.pnpm.io/install.sh | sh -
-                  source /root/.bashrc
+            # - name: Install pnpm
+            #   run: |
+            #       curl -fsSL https://get.pnpm.io/install.sh | sh -
+            #       source /root/.bashrc
 
             - name: Install Docker
               run: |
