--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -105,15 +105,10 @@ jobs:
             #   run: sleep 20 # Adjust the sleep duration as needed
 
             - name: Deploy Faucet Server
-              env:
-                  PORT: 2001
-                  RPC_HTTP_URL: http://localhost:8545
-                  FAUCET_PRIVATE_KEY: "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
-                  DRIP_AMOUNT_ETHER: 110
               run: |
                   cd src/front
-                  pnpm install @latticexyz/faucet@next
-                  pm2 start --name faucet-server "node node_modules/.bin/faucet-server"
+                  pnpm install @latticexyz/faucet
+                  pm2 start --name faucet-server "RPC_HTTP_URL=http://localhost:8545 FAUCET_PRIVATE_KEY="0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80" DRIP_AMOUNT_ETHER=200 PORT=2001 pnpm faucet-server"
 
             - name: Save PM2 Process List
               run: pm2 save
