--- a/src/front/package.json
+++ b/src/front/package.json
@@ -9,7 +9,10 @@
         "build": "vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "codegen": "graphql-codegen"
+        "codegen": "graphql-codegen",
+        "test": "vitest --run",
+        "wtest": "vitest",
+        "coverage": "vitest --coverage"
     },
     "dependencies": {
         "@apollo/client": "^3.8.8",
@@ -47,6 +50,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "typescript": "^5.3.3",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vitest": "^1.4.0"
     }
 }
