--- a/src/event/package.json
+++ b/src/event/package.json
@@ -12,14 +12,12 @@
   "author": "0xPuddi",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "typescript": "^5.4.3"
-  },
-  "dependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-typescript": "^7.24.1",
-    "babel-jest": "^29.7.0"
+    "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.4.3"
   }
 }
