--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dotenv": "^16.4.5",
         "ethers": "^6.7.1",
         "planck-js": "^0.3.31",
-        "simplex-noise": "^4.0.1"
+        "simplex-noise": "^4.0.1",
+        "vaul": "^0.9.0"
     },
     "devDependencies": {
         "esbuild": "^0.19.2",
