--- a/src/front/package.json
+++ b/src/front/package.json
@@ -18,20 +18,36 @@
         "@apollo/client": "^3.8.8",
         "@cartesi/rollups": "^1.0.0",
         "@latticexyz/faucet": "2.0.0-next.17",
+        "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-collapsible": "^1.0.3",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@react-three/drei": "9.92.3",
         "@react-three/fiber": "8.15.12",
         "@react-three/postprocessing": "^2.15.12",
         "@reduxjs/toolkit": "^2.0.1",
         "@types/three": "0.159.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
         "colyseus.js": "^0.15.18",
         "graphql": "^16.8.1",
+        "lucide-react": "^0.364.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.3",
         "react-redux": "^9.0.4",
+        "react-sliding-side-panel": "^2.0.3",
+        "tailwind-merge": "^2.2.2",
+        "tailwindcss-animate": "^1.0.7",
         "three": "0.159.0",
         "three-line-raycast": "1.0.2",
         "troika-three-text": "^0.49.0",
+        "vaul": "^0.9.0",
         "viem": "^1.21.0",
         "wagmi": "^1.4.12"
     },
@@ -41,14 +57,18 @@
         "@graphql-codegen/typescript": "2.7.3",
         "@graphql-codegen/typescript-operations": "^2.5.3",
         "@graphql-typed-document-node/core": "^3.1.1",
+        "@types/node": "^20.12.2",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.3",
         "typescript": "^5.3.3",
         "vite": "^5.0.8",
         "vitest": "^1.4.0"
