--- a/src/front/tsconfig.json
+++ b/src/front/tsconfig.json
@@ -19,7 +19,13 @@
         "strict": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
