--- a/src/front/package.json
+++ b/src/front/package.json
@@ -19,6 +19,7 @@
         "@cartesi/rollups": "^1.0.0",
         "@latticexyz/faucet": "2.0.0-next.17",
         "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-collapsible": "^1.0.3",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-icons": "^1.3.0",
