--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "JS DApp",
     "dependencies": {
         "@latticexyz/faucet": "2.0.0-next.17",
+        "@privy-io/react-auth": "^1.59.2",
         "alea": "^1.0.1",
         "dotenv": "^16.4.5",
         "ethers": "^6.7.1",
