--- a/src/indexer/package.json
+++ b/src/indexer/package.json
@@ -37,6 +37,7 @@
         "@colyseus/monitor": "^0.15.0",
         "@colyseus/playground": "^0.15.3",
         "@colyseus/tools": "^0.15.0",
+        "@privy-io/server-auth": "^1.7.3",
         "colyseus": "^0.15.0",
         "express": "^4.18.2",
         "node-fetch": "^3.3.2",
