change urls on prod, fonts load on prod

--- a/src/indexer/.env.production
+++ b/src/indexer/.env.production
@@ -1,5 +1,5 @@
 SAMPLE=production
-RPC_URL=http://dev.bubblewars.io:8545
-INSPECTOR_URL=http://dev.bubblewars.io:8080/inspect
+RPC_URL=http://localhost:8545
+INSPECTOR_URL=http://localhost:8080/inspect
 
 
