speed fix, dev server

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -93,13 +93,18 @@ jobs:
             # - name: Wait for Backend Setup
             #   run: sleep 20 # Adjust the sleep duration as needed
 
-            - name: Run Front End
+            # - name: Run Front End
+            #   run: |
+            #       cd src/front
+            #       npm i
+            #       npm run build
+            #       cd dist
+            #       pm2 start --name front-end "npx serve -l 80"
+            - name: Run Front End Development Server
               run: |
                   cd src/front
                   npm i
-                  npm run build
-                  cd dist
-                  pm2 start --name front-end "npx serve -l 80"
+                  pm2 start --name front-end "npm run host"
 
             # - name: Wait for Front-End Setup
             #   run: sleep 20 # Adjust the sleep duration as needed
