--- a/src/front/package.json
+++ b/src/front/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --host",
-        "host": "vite --host --port 80",
+        "host": "vite --host --port 80 --mode production",
         "build": "vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
