--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -93,18 +93,13 @@ jobs:
             # - name: Wait for Backend Setup
             #   run: sleep 20 # Adjust the sleep duration as needed
 
-            # - name: Run Front End
-            #   run: |
-            #       cd src/front
-            #       npm i
-            #       npm run build
-            #       cd dist
-            #       pm2 start --name front-end "npx serve -l 80"
-            - name: Run Front End Development Server
+            - name: Run Front End
               run: |
                   cd src/front
                   npm i
-                  pm2 start --name front-end "npm run host"
+                  npm run build
+                  cd dist
+                  pm2 start --name front-end "npx serve -l 80 -d "
 
             # - name: Wait for Front-End Setup
             #   run: sleep 20 # Adjust the sleep duration as needed
