--- a/src/front/package.json
+++ b/src/front/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite --host",
         "host": "vite --host --port 80 --mode production",
-        "build": "vite build",
+        "build": "vite build --mode development",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "codegen": "graphql-codegen",
