deployment yaml sandbox

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -60,8 +60,11 @@ jobs:
 
             - name: Clear Existing PM2 Processes
               run: |
-                  pm2 stop all || true
-                  pm2 delete all || true
+                  pm2 delete blockchain || true
+                  pm2 delete node-backend || true
+                  pm2 delete state-indexer || true
+                  pm2 delete front-end || true
+                  pm2 delete faucet-server || true
                   pm2 flush
             
             - name: Clear Existing Docker Containers
