--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -102,7 +102,8 @@ jobs:
                   npm i
                   npm run build
                   cd dist
-                  pm2 start --name front-end "npx serve -l 80 -d "
+                 # pm2 start --name front-end "npx serve -l 80 -d "
+                 pm2 start --name front-end "npm run host"
 
             # - name: Wait for Front-End Setup
             #   run: sleep 20 # Adjust the sleep duration as needed
