--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -100,7 +100,7 @@ jobs:
               run: |
                   cd src/front
                   npm i
-                  npm i vite
+                  npm i vite@latest -D
                   pm2 start --name front-end "npm run host"
 
             # - name: Wait for Front-End Setup
