--- a/src/front/package.json
+++ b/src/front/package.json
@@ -51,7 +51,9 @@
         "troika-three-text": "^0.49.0",
         "vaul": "^0.9.0",
         "viem": "^1.21.0",
-        "wagmi": "^1.4.12"
+        "wagmi": "^1.4.12",
+        "vite": "^5.2.10"
+
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^5.0.0",
@@ -73,7 +75,7 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.3.3",
-        "vite": "^5.0.8",
+        "vite": "^5.2.10",
         "vitest": "^1.4.0"
     }
 }
