--- a/src/front/package.json
+++ b/src/front/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --host",
-        "host": "npx vite --host --port 80 --mode production",
+        "host": "npx vite --host --port 8080 --mode development",
         "build": "vite build --minify false --mode development",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
@@ -51,9 +51,7 @@
         "troika-three-text": "^0.49.0",
         "vaul": "^0.9.0",
         "viem": "^1.21.0",
-        "wagmi": "^1.4.12",
-        "vite": "^5.2.10"
-
+        "wagmi": "^1.4.12"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^5.0.0",
