--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -77,6 +77,17 @@ jobs:
                   sudo systemctl stop docker || true
                   sudo systemctl start docker || true
 
+            - name: Configure Docker Logging
+              run: |
+                  echo '{
+                      "log-driver": "json-file",
+                      "log-opts": {
+                          "max-size": "10m",
+                          "max-file": "3"
+                      }
+                  }' | sudo tee /etc/docker/daemon.json
+                  sudo systemctl restart docker
+
             - name: Set up Local Blockchain and Smart Contracts
               run: pm2 start --name blockchain "sunodo run --no-backend --block-time 1"
 
