--- a/src/indexer/package.json
+++ b/src/indexer/package.json
@@ -40,6 +40,7 @@
         "@privy-io/server-auth": "^1.7.3",
         "colyseus": "^0.15.0",
         "express": "^4.18.2",
+        "lodash": "^4.17.21",
         "node-fetch": "^3.3.2",
         "viem": "^2.7.16"
     }
