--- a/src/front/package.json
+++ b/src/front/package.json
@@ -29,7 +29,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@react-three/drei": "9.92.3",
+        "@react-three/drei": "^9.92.3",
         "@react-three/fiber": "8.15.12",
         "@react-three/postprocessing": "^2.15.12",
         "@reduxjs/toolkit": "^2.0.1",
