--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -8,24 +8,6 @@ on:
 jobs:
     build-and-deploy:
         runs-on: self-hosted
-        env:
-          CARTESI_BLOCKCHAIN_FINALITY_OFFSET: {{ secrets.CARTESI_BLOCKCHAIN_FINALITY_OFFSET }}
-          CARTESI_BLOCKCHAIN_ID: {{ secrets.CARTESI_BLOCKCHAIN_ID }}
-          CARTESI_CONTRACTS_APPLICATION_ADDRESS: {{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }}
-          CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: {{ secrets.CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER }}
-          CARTESI_CONTRACTS_AUTHORITY_ADDRESS: {{ secrets.CARTESI_CONTRACTS_AUTHORITY_ADDRESS }}
-          CARTESI_CONTRACTS_HISTORY_ADDRESS: {{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }}
-          CARTESI_CONTRACTS_INPUT_BOX_ADDRESS: {{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}
-          CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER: {{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
-          CARTESI_EPOCH_DURATION: {{ secrets.CARTESI_EPOCH_DURATION }}
-          CARTESI_AUTH_MNEMONIC: {{ secrets.CARTESI_AUTH_MNEMONIC }}
-          CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
-          CARTESI_BLOCKCHAIN_WS_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
-          RPC_HTTP_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
-          RPC_WS_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
-          INSPECTOR_URL: {{ secrets.INSPECTOR_URL }}
-          PRIVY_APP_ID: {{ secrets.PRIVY_APP_ID }}
-          PRIVY_APP_SECRET: {{ secrets.PRIVY_APP_SECRET }}
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v3
@@ -55,21 +37,21 @@ jobs:
             #       sudo apt-get update
             #       sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
-            # - name: Install cartesi
+            # - name: Install Sunodo
             #   run: |
             #     success=false
             #     attempts=0
             #     max_attempts=3
             #     while ! $success && [ $attempts -lt $max_attempts ]; do
-            #       pnpm install -g @cartesi/cli && success=true || success=false
+            #       pnpm install -g @sunodo/cli && success=true || success=false
             #       attempts=$((attempts + 1))
             #       if ! $success; then
-            #         echo "Attempt $attempts to install cartesi failed. Trying again in 5 seconds..."
+            #         echo "Attempt $attempts to install Sunodo failed. Trying again in 5 seconds..."
             #         sleep 5
             #       fi
             #     done
             #     if ! $success; then
-            #       echo "Failed to install cartesi after $max_attempts attempts."
+            #       echo "Failed to install Sunodo after $max_attempts attempts."
             #       exit 1
             #     fi
 
@@ -106,7 +88,16 @@ jobs:
                   }' | sudo tee /etc/docker/daemon.json
                   sudo systemctl restart docker
 
-            
+            - name: Set up Local Blockchain and Smart Contracts
+              run: pm2 start --name blockchain "sunodo run --no-backend --block-time 1"
+
+            # - name: Wait for Blockchain Setup
+            #   run: sleep 30 # Adjust the sleep duration as needed
+
+            - name: Start Node Backend
+              run: |
+                  npm i
+                  pm2 start --name node-backend "npm run host"
             
             - name: Start State Indexing Server
               run: |
