--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@privy-io/react-auth": "^1.59.2",
         "alea": "^1.0.1",
         "dotenv": "^16.4.5",
-        "ethers": "^6.7.1",
+        "ethers": "5.6.9",
         "planck-js": "^0.3.31",
         "simplex-noise": "^4.0.1",
         "vaul": "^0.9.0"
