--- a/src/front/codegen.yml
+++ b/src/front/codegen.yml
@@ -5,4 +5,4 @@ generates:
         plugins:
             - typescript
             - typescript-operations
-            - typed-document-node
+            - typescript-urql
