--- a/src/front/package.json
+++ b/src/front/package.json
@@ -4,12 +4,14 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite --host",
+        "dev": "vite --host --force",
         "host": "npx vite --host --port 8080 --mode development",
         "build": "vite build --minify false --mode development",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "codegen": "graphql-codegen",
+        "codegen": "run-p codegen:typechain codegen:graphql",
+        "codegen:graphql": "graphql-codegen",
+        "codegen:typechain": "typechain --target ethers-v5 --out-dir src/generated-src/rollups './node_modules/@cartesi/rollups/export/artifacts/**/*.json'",
         "test": "vitest --run",
         "wtest": "vitest",
         "coverage": "vitest --coverage"
@@ -37,6 +39,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "colyseus.js": "^0.15.18",
+        "ethers": "5.6.9",
         "graphql": "^16.8.1",
         "lucide-react": "^0.364.0",
         "react": "^18.2.0",
@@ -49,16 +52,19 @@
         "three": "0.159.0",
         "three-line-raycast": "1.0.2",
         "troika-three-text": "^0.49.0",
+        "urql": "^2.2.0",
         "vaul": "^0.9.0",
         "viem": "^1.21.0",
         "wagmi": "^1.4.12"
     },
     "devDependencies": {
-        "@graphql-codegen/cli": "^5.0.0",
+        "@graphql-codegen/cli": "2.12.0",
         "@graphql-codegen/typed-document-node": "^2.3.3",
         "@graphql-codegen/typescript": "2.7.3",
         "@graphql-codegen/typescript-operations": "^2.5.3",
+        "@graphql-codegen/typescript-urql": "^3.5.7",
         "@graphql-typed-document-node/core": "^3.1.1",
+        "@typechain/ethers-v5": "^10.0.0",
         "@types/node": "^20.12.2",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
@@ -70,6 +76,7 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.3.3",
