--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -109,7 +109,7 @@ jobs:
                   sudo systemctl restart docker
 
             - name: Set up local Node
-              run: pm2 start --name blockchain "docker run -p 10000:10000 ultimateurinater/bubblewars-sepolia:latest
+              run: pm2 start --name blockchain "docker run -p 10000:10000 ultimateurinater/bubblewars-sepolia:latest"
 "
 
             # - name: Wait for Blockchain Setup
