--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -9,24 +9,24 @@ jobs:
     build-and-deploy:
         runs-on: self-hosted
         env:
-          CARTESI_BLOCKCHAIN_FINALITY_OFFSET: {{ secrets.CARTESI_BLOCKCHAIN_FINALITY_OFFSET }}
-          CARTESI_BLOCKCHAIN_ID: {{ secrets.CARTESI_BLOCKCHAIN_ID }}
-          CARTESI_CONTRACTS_APPLICATION_ADDRESS: {{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }}
-          CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: {{ secrets.CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER }}
-          CARTESI_CONTRACTS_AUTHORITY_ADDRESS: {{ secrets.CARTESI_CONTRACTS_AUTHORITY_ADDRESS }}
-          CARTESI_CONTRACTS_HISTORY_ADDRESS: {{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }}
-          CARTESI_CONTRACTS_INPUT_BOX_ADDRESS: {{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}
-          CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER: {{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
-          CARTESI_EPOCH_DURATION: {{ secrets.CARTESI_EPOCH_DURATION }}
-          CARTESI_AUTH_MNEMONIC: {{ secrets.CARTESI_AUTH_MNEMONIC }}
-          CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
-          CARTESI_BLOCKCHAIN_WS_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
-          RPC_HTTP_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
-          RPC_WS_ENDPOINT: {{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
-          INSPECTOR_URL: {{ secrets.INSPECTOR_URL }}
-          PRIVY_APP_ID: {{ secrets.PRIVY_APP_ID }}
-          PRIVY_APP_SECRET: {{ secrets.PRIVY_APP_SECRET }}
-          ROLLUP_OWNER_ADDRESS: {{ secrets.ROLLUP_OWNER_ADDRESS }}
+          CARTESI_BLOCKCHAIN_FINALITY_OFFSET: ${{ secrets.CARTESI_BLOCKCHAIN_FINALITY_OFFSET }}
+          CARTESI_BLOCKCHAIN_ID: ${{ secrets.CARTESI_BLOCKCHAIN_ID }}
+          CARTESI_CONTRACTS_APPLICATION_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }}
+          CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER }}
+          CARTESI_CONTRACTS_AUTHORITY_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_AUTHORITY_ADDRESS }}
+          CARTESI_CONTRACTS_HISTORY_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }}
+          CARTESI_CONTRACTS_INPUT_BOX_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}
+          CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
+          CARTESI_EPOCH_DURATION: ${{ secrets.CARTESI_EPOCH_DURATION }}
+          CARTESI_AUTH_MNEMONIC: ${{ secrets.CARTESI_AUTH_MNEMONIC }}
+          CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
+          CARTESI_BLOCKCHAIN_WS_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
+          RPC_HTTP_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
+          RPC_WS_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
+          INSPECTOR_URL: ${{ secrets.INSPECTOR_URL }}
+          PRIVY_APP_ID: ${{ secrets.PRIVY_APP_ID }}
+          PRIVY_APP_SECRET: ${{ secrets.PRIVY_APP_SECRET }}
+          ROLLUP_OWNER_ADDRESS: ${{ secrets.ROLLUP_OWNER_ADDRESS }}
 
         steps:
             - name: Checkout Repository
