--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -107,9 +107,31 @@ jobs:
                       }
                   }' | sudo tee /etc/docker/daemon.json
                   sudo systemctl restart docker
+            
+            - name: Create Environment File
+              run: |
+                echo "CARTESI_BLOCKCHAIN_FINALITY_OFFSET=${{ secrets.CARTESI_BLOCKCHAIN_FINALITY_OFFSET }}" >> .env
+                echo "CARTESI_BLOCKCHAIN_ID=${{ secrets.CARTESI_BLOCKCHAIN_ID }}" >> .env
+                echo "CARTESI_CONTRACTS_APPLICATION_ADDRESS=${{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }}" >> .env
+                echo "CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER }}" >> .env
+                echo "CARTESI_CONTRACTS_AUTHORITY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_AUTHORITY_ADDRESS }}" >> .env
+                echo "CARTESI_CONTRACTS_HISTORY_ADDRESS=${{ secrets.CARTESI_CONTRACTS_HISTORY_ADDRESS }}" >> .env
+                echo "CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}" >> .env
+                echo "CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}" >> .env
+                echo "CARTESI_EPOCH_DURATION=${{ secrets.CARTESI_EPOCH_DURATION }}" >> .env
+                echo "CARTESI_AUTH_MNEMONIC=${{ secrets.CARTESI_AUTH_MNEMONIC }}" >> .env
+                echo "CARTESI_BLOCKCHAIN_HTTP_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}" >> .env
+                echo "CARTESI_BLOCKCHAIN_WS_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}" >> .env
+                echo "RPC_HTTP_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}" >> .env
+                echo "RPC_WS_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}" >> .env
+                echo "INSPECTOR_URL=${{ secrets.INSPECTOR_URL }}" >> .env
+                echo "PRIVY_APP_ID=${{ secrets.PRIVY_APP_ID }}" >> .env
+                echo "PRIVY_APP_SECRET=${{ secrets.PRIVY_APP_SECRET }}" >> .env
+                echo "ROLLUP_OWNER_ADDRESS=${{ secrets.ROLLUP_OWNER_ADDRESS }}" >> .env
+
 
             - name: Set up local Node
-              run: pm2 start --name blockchain "docker run -p 10000:10000 ultimateurinater/bubblewars-sepolia:latest"
+              run: pm2 start --name blockchain "docker run --env-file .env -p 10000:10000 ultimateurinater/bubblewars-sepolia:latest"
 
             # - name: Wait for Blockchain Setup
             #   run: sleep 30 # Adjust the sleep duration as needed
