--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -18,6 +18,7 @@ jobs:
           CARTESI_CONTRACTS_INPUT_BOX_ADDRESS: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}
           CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER: ${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}
           CARTESI_EPOCH_DURATION: ${{ secrets.CARTESI_EPOCH_DURATION }}
+          CARTESI_EPOCH_LENGTH: ${{ secrets.CARTESI_EPOCH_LENGTH }}
           CARTESI_AUTH_MNEMONIC: ${{ secrets.CARTESI_AUTH_MNEMONIC }}
           CARTESI_BLOCKCHAIN_HTTP_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}
           CARTESI_BLOCKCHAIN_WS_ENDPOINT: ${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}
@@ -119,6 +120,7 @@ jobs:
                 echo "CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_ADDRESS }}" >> .env
                 echo "CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=${{ secrets.CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER }}" >> .env
                 echo "CARTESI_EPOCH_DURATION=${{ secrets.CARTESI_EPOCH_DURATION }}" >> .env
+                echo "CARTESI_EPOCH_LENGTH=${{ secrets.CARTESI_EPOCH_LENGTH }}" >> .env
                 echo "CARTESI_AUTH_MNEMONIC=${{ secrets.CARTESI_AUTH_MNEMONIC }}" >> .env
                 echo "CARTESI_BLOCKCHAIN_HTTP_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_HTTP_ENDPOINT }}" >> .env
                 echo "CARTESI_BLOCKCHAIN_WS_ENDPOINT=${{ secrets.CARTESI_BLOCKCHAIN_WS_ENDPOINT }}" >> .env
