--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -109,9 +109,12 @@ jobs:
                   }' | sudo tee /etc/docker/daemon.json
                   sudo systemctl restart docker
             
+            - name: Log in to Docker Hub
+              run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            
             - name: Set up local Node
               run: |
-                pm2 start "docker run -p 10000:10000 \
+                pm2 start --name blockchain "docker run -p 10000:10000 \
                   --env CARTESI_BLOCKCHAIN_FINALITY_OFFSET=${{ secrets.CARTESI_BLOCKCHAIN_FINALITY_OFFSET }} \
                   --env CARTESI_BLOCKCHAIN_ID=${{ secrets.CARTESI_BLOCKCHAIN_ID }} \
                   --env CARTESI_CONTRACTS_APPLICATION_ADDRESS=${{ secrets.CARTESI_CONTRACTS_APPLICATION_ADDRESS }} \
